--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <head>
   <body>
     Catch the star, make it glows by feeding it hopes and wishs.
-    <img src='images/"boxing-logo-font-'gear'-final2.jpg" />
+    <img src='images/"strawberry 18.pdf" />
   <body>
   <html>
