--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
   <head>
   <body>
     Catch the star, make it glows by feeding it hopes and wishs.
-    <img src='images/"strawberry 18.pdf" />
+    <img src='images/"strawberry_18.pdf"/>
   <body>
   <html>
