--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
-  <head>
-  <body>
-    Catch the star, make it glows by feeding it hopes and wishs.
-    <img src='images/"boxing-logo-font-'gear'-final2.jpg" />
-  <body>
-  <html>
+		<html>
+  	<head>
+  		Catch the star
+ 	<head>
+  	<body>
+    	Catch the star, make it glows by feeding it hopes and wishs.
+    	<pdf src='images/"strawberry_18.pdf"' />
+    <body>
+    	<html>
