--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-		<html>
+<html>
   	<head>
   		Catch the star
  	<head>
   	<body>
     	Catch the star, make it glows by feeding it hopes and wishs.
-    	<pdf src='images/"strawberry_18.pdf"' />
+    	<pdf src="images/strawberry_18.pdf" />
     <body>
-    	<html>
+ <html>
