--- a/index.html
+++ b/index.html
@@ -4,10 +4,6 @@
  	<head>
   	<body>
     	Catch the star, make it glows by feeding it hopes and wishs.
-    	<pdf src="images/strawberry_18.pdf" />
+    	<img src="images/strawberry_18.pdf" />
     <body>
-<<<<<<< HEAD
- <html>
-=======
- <html>
->>>>>>> db9004baee6b2e84dddf6d48423a69148a8533a6
+<html>
