--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   	<head>
-  		Catch the star
+  		<title>Catch the star<title>
+  			<link rel>style.css<link rel>
  	<head>
   	<body>
     	Catch the star, make it glows by feeding it hopes and wishs.
     	<img src="images/strawberry_18.pdf" />
     <body>
+    <h1>awesome<h1>
 <html>
