--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
   	<head>
-  		<title>Catch the star<title>
-  			<link rel>style.css<link rel>
  	<head>
   	<body>
     	Catch the star, make it glows by feeding it hopes and wishs.
     	<img src="images/strawberry_18.pdf" />
+    <title>'Catch the star'<title>
     <body>
-    <h1>awesome<h1>
+  	<link rel>style.css<link rel>
+  	<div>
+    
 <html>
